--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "private": true,
+  "private": false,
   "name": "rahul-mahto-portfolio",
   "homepage": "https://github.com/RahulM4/rahul-mahto-portfolio",
   "version": "0.1.0",
