--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -23,35 +23,14 @@
             "isFork": false,
             "languages": [
                 {
-                    "name":"CPP",
-                    "iconifyClass":"logos-c-plusplus"
+                    "name": "C++",
+                    "iconifyClass": "logos-c-plusplus"
+                },
+                {
+                    "name": "OpenGL",
+                    "iconifyClass": "logos-opengl"
                 }
-            ]
-        },
-        {
-            "id": "R_kgDOHPknvQ",
-            "name": "blood-bank-monitoring-system",
-            "createdAt": "2022-04-27T07:30:05Z",
-            "url": "https://github.com/RahulM4/blood-bank-monitoring-system",
-            "description": "Blood Bank Monitoring System is a web application which is developed to store the information of the blood donors, recipients, blood banks and hospitals in a Mysql database.",
-            "isFork": false,
-            "languages": [
-                {
-                    "name": "PHP",
-                    "iconifyClass": "logos-php"
-                },
-                {
-                    "name": "CSS",
-                    "iconifyClass": "logos-css-3"
-                },
-                {
-                    "name": "JavaScript",
-                    "iconifyClass": "logos-javascript"
-                },
-                {
-                    "name": "Mysql",
-                    "iconifyClass": "logos-mysql"
-                }
+               
             ]
         },
         {
@@ -73,34 +52,49 @@
                 {
                     "name": "JavaScript",
                     "iconifyClass": "logos-javascript"
-                },
-                {
-                    "name": "React",
-                    "iconifyClass": "logos-react"
                 }
             ]
         },
         {
             "id": "R_kgDOJ6Ovaw",
-            "name": "WeatherApp-Android",
+            "name": "LetsChat",
             "createdAt": "2023-07-11T09:51:38Z",
-            "url": "https://github.com/RahulM4/WeatherApp-Android",
-            "description": "WeatherApp-Android which shows real time temperature of city.",
+            "url": "https://github.com/RahulM4/LetsChat",
+            "description": "LetsChat is a full stack chat application that allows users to communicate with each other in real-time. ",
             "isFork": false,
             "languages": [
                 {
-                    "name": "Java",
-                    "iconifyClass": "logos-java"
+                    "name": "JavaScript",
+                    "iconifyClass": "logos-javascript"
                 },
                 {
-                    "name": "API",
-                    "iconifyClass": "logos-api"
+                    "name" : "HTML",
+                    "iconifyClass": "logos-html-5"
                 },
                 {
-                    "name": "Android",
-                    "iconifyClass": "logos-android"
+                    "name" : "CSS",
+                    "iconifyClass": "logos-css-3"
+                },
+                {
+                    "name" : "Node.js",
+                    "iconifyClass": "logos-nodejs"
+                },
+                {
+                    "name" : "Express.js",
+                    "iconifyClass": "logos-express"
+                },
+                {
+                    "name" : "MongoDB",
+                    "iconifyClass": "logos-mongodb"
+                },
+                {
+                    "name" : "Socket.io",
+                    "iconifyClass": "logos-socket.io"
+                },
+                {
+                    "name" : "React.js",
+                    "iconifyClass": "logos-react"
                 }
-              
             ]
         },
         {
@@ -116,9 +110,37 @@
                     "iconifyClass": "logos-java"
                 },
                 {
+                    "name": "Firebase",
+                    "iconifyClass": "logos-firebase"
+                },
+                {
                     "name": "Android",
                     "iconifyClass": "logos-android"
                 }
+            ]
+        },
+        {
+            "id": "R_kgDOKBDMWg",
+            "name": "Occupancy Monitoring System",
+            "createdAt": "2022-07-25T08:08:12Z",
+            "url": "https://github.com/RahulM4/Occupancy-Monitoring-System",
+            "description": "Welcome to the IIITA - Occupancy Monitoring System !!",
+            "isFork": false,
+            "languages": [
+                {
+                    "name": "Java",
+                    "iconifyClass": "logos-java"
+                },
+                {
+                    "name": "Firebase",
+                    "iconifyClass": "logos-firebase"
+                },
+                {
+                    "name": "Android",
+                    "iconifyClass": "logos-android"
+                }
+
+                
             ]
         }
     ]
